--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -5,7 +5,3 @@
   @extend %clearfix;
   position: relative;
 }
-
-.site__footer__content {
-  min-height: 325px;
-}
